Remove daisyUI, custom styling

--- a/src/app.html
+++ b/src/app.html
@@ -4,10 +4,9 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
-        <title>Clarinet Pages Reader</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-slate-900 leading-relaxed text-slate-400 antialiased">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
