--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-slate-900 leading-relaxed text-slate-400 antialiased">
+	<body data-sveltekit-preload-data="tap" class="bg-slate-900 leading-relaxed text-slate-400 antialiased">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
