--- a/src/app.html
+++ b/src/app.html
@@ -4,8 +4,10 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<script src="topbar.min.js"></script>
 		%sveltekit.head%
 	</head>
+
 	<body
 		data-sveltekit-preload-data="tap"
 		class="bg-slate-900 leading-relaxed text-slate-400 antialiased"
