--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 
 	<body
 		data-sveltekit-preload-data="tap"
-		class="bg-slate-900 leading-relaxed text-slate-400 antialiased"
+		class="bg-slate-900 bg-gradient-to-b from-slate-900 to-slate-950/30 leading-relaxed text-slate-400 antialiased"
 	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
