--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<script src="topbar.min.js"></script>
+        <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 		%sveltekit.head%
 	</head>
 
