--- a/src/app.html
+++ b/src/app.html
@@ -4,8 +4,35 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+
+		<title>Home - Clarinet BBoard Reader</title>
+		<meta
+			name="description"
+			content="A reader for the Clarinet BBoard focused on a streamlined mobile reading experience."
+		/>
+
+		<meta property="og:url" content="https://clarinet-bboard.vercel.app" />
+		<meta property="og:type" content="website" />
+
+		<meta property="og:title" content="Clarinet BBoard Reader" />
+		<meta
+			property="og:description"
+			content="A reader for the Clarinet BBoard focused on a streamlined mobile reading experience."
+		/>
+		<meta property="og:image" content="/og.png" />
+
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta property="twitter:domain" content="clarinet-bboard.vercel.app" />
+		<meta property="twitter:url" content="https://clarinet-bboard.vercel.app" />
+		<meta name="twitter:title" content="Clarinet BBoard Reader" />
+		<meta
+			name="twitter:description"
+			content="A reader for the Clarinet BBoard focused on a streamlined mobile reading experience."
+		/>
+		<meta name="twitter:image" content="/og.png" />
+
 		<script src="topbar.min.js"></script>
-        <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+		<link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
 		%sveltekit.head%
 	</head>
 
